fix mobile dark mode

--- a/theme.css
+++ b/theme.css
@@ -1005,7 +1005,7 @@ body.is-mobile .view-action:nth-last-of-type(2) {
 }
 
 
-.theme-light, .theme-dark {
+.theme-light, .theme-dark, .is-mobile.theme-dark {
 --color-base-00: var(--background);
   --color-base-05: var(--surface);
   --color-base-10: var(--surface-variant);
@@ -1025,6 +1025,13 @@ body.is-mobile .view-action:nth-last-of-type(2) {
   --shadow-s:0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   --shadow-m: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   --color-accent-2: var(--secondary);
+}
+
+/* fix mobile color mappings */
+.theme-dark.is-mobile {
+    --background-modifier-form-field: var(--color-base-25);
+    --background-secondary-alt: var(--color-base-30);
+    --interactive-normal: var(--color-base-30);
 }
 
 /* ================== themes =============== */
